<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_C">

    <androidx.cardview.widget.CardView
        android:id="@+id/idCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/afrihunt"
                tools:context=".Activity_C">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pic_sorround"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="166dp"
                    android:layout_marginEnd="177dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/desc"
                        app:srcCompat="@drawable/douglas"
                        ></ImageView>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/track"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_val" />

                <TextView
                    android:id="@+id/track_val"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/track" />

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/track_val" />

                <TextView
                    android:id="@+id/email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_label" />

                <TextView
                    android:id="@+id/phone_no_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/phone_num"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_value" />

                <TextView
                    android:id="@+id/phone_no_value"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_no_label" />

                <TextView
                    android:id="@+id/country_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="177dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/country"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_no_value"
                    app:layout_constraintVertical_bias="0.235" />

                <TextView
                    android:id="@+id/country_value"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="177dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country_label" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="166dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/user_name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pic_sorround" />

                <TextView
                    android:id="@+id/name_val"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="177dp"
                    android:fontFamily="@font/andika"
                    android:shadowColor="@color/colorPrimary"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>