...
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintWidth_percent="0.7"
            android:background="@color/colorPrimary"
            android:padding="40dp">

            <Button
                android:id="@+id/user_info"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_shape"
...
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/alc_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
...
